--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,37 @@
 baseURL = 'http://example.org/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
+theme = "hugo-theme-codex"
+
+[params]
+# Follow the Hugo date/time format reference here:
+# https://gohugo.io/functions/format/#gos-layout-string
+dateFormat = "Jan 2 2006"
+# Set to true to display page title in table of contents in blog posts.
+showPageTitleInTOC = false
+
+# This disables Hugo's default syntax highlighting in favor
+# of prismjs. If you wish to use Hugo's default syntax highlighting
+# over prismjs, remove this. You will also need to remove the prismjs
+# vendor script in layouts/blog/single.html.
+[markup]
+
+[markup.highlight]
+codeFences = false
+
+# Set to false to disallow raw HTML in markdown files
+[markup.goldmark.renderer]
+unsafe = true
+
+# Controls the navigation
+[[menu.main]]
+identifier = "about"
+name = "about"
+title = "About"
+url = "/"
+
+[[menu.main]]
+identifier = "blog"
+name = "blog"
+title = "Blog"
+url = "/blog"
