--- a/backend/project.yml
+++ b/backend/project.yml
@@ -1,19 +1,18 @@
 parameters: {}
 environment: {}
 packages:
-    - name: sample
-      shared: false
-      environment: {}
-      parameters: {}
-      annotations: {}
-      functions:
-        - name: hello
-          binary: false
-          main: ""
-          runtime: go:default
-          web: true
-          webSecure: false
-          parameters: {}
-          environment: {}
-          annotations: {}
-          limits: {}
+  - name: sample
+    shared: false
+    environment: {}
+    parameters: {}
+    annotations: {}
+    functions:
+      - name: hello
+        binary: false
+        main: ''
+        runtime: go:default
+        web: true
+        parameters: {}
+        environment: {}
+        annotations: {}
+        limits: {}
