--- a/backend/project.yml
+++ b/backend/project.yml
@@ -1,13 +1,13 @@
 parameters: {}
 environment: {}
 packages:
-  - name: sample
+  - name: mailing-list
     shared: false
     environment: {}
     parameters: {}
     annotations: {}
     functions:
-      - name: hello
+      - name: subscribe
         binary: false
         main: ''
         runtime: go:default
