--- a/backend/project.yml
+++ b/backend/project.yml
@@ -10,7 +10,7 @@ packages:
       - name: subscribe
         binary: false
         main: ''
-        runtime: go:default
+        runtime: go:1.20
         web: true
         parameters: {}
         environment: {}
