--- a/backend/project.yml
+++ b/backend/project.yml
@@ -1,5 +1,6 @@
 parameters: {}
-environment: {}
+environment:
+  DB_CONNECTION_INFO: '${DB_CONNECTION_INFO}'
 packages:
   - name: mailing-list
     shared: false
